--- a/home.html
+++ b/home.html
@@ -6,16 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>momomo</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-    <form class="login-form" >
+    <form class="login-form">
         <input required maxlength=15 type="text" placeholder="what is your name?" />
         <button>Log In</button>
     </form>
-    <h1 id="good" class="hidden"></h1>
-    <script src="app.js"></script>
+    <h1 id="greeting" class="hidden"></h1>
+    <h2 id="clock">00:00</h2>
+    <form id="todo-form">
+        <input type="text" placeholder="Write what you have to do" required/>
+    </form>
+    <ul id="todo-list"></ul>
+    <div id = "quote">
+        <span></span><br>
+        <span></span>
+    </div>
+
+    <script src="js/greeting.js"></script>
+    <script src="js/clock.js"></script>
+    <script src="js/quotes.js"></script>
+    <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
 </body>
 
 </html>
