--- a/home.html
+++ b/home.html
@@ -24,12 +24,17 @@
         <span></span><br>
         <span></span>
     </div>
+    <div id="weather">
+        <span></span>
+        <span></span>
+    </div>
 
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
+    <script src="js/weather.js"></script>
 </body>
 
 </html>
