--- a/home.html
+++ b/home.html
@@ -7,34 +7,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>momomo</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
 </head>
 
 <body>
-    <form class="login-form">
-        <input required maxlength=15 type="text" placeholder="what is your name?" />
-        <button>Log In</button>
-    </form>
-    <h1 id="greeting" class="hidden"></h1>
-    <h2 id="clock">00:00</h2>
-    <form id="todo-form">
-        <input type="text" placeholder="Write what you have to do" required/>
-    </form>
-    <ul id="todo-list"></ul>
-    <div id = "quote">
-        <span></span><br>
-        <span></span>
-    </div>
+    <main class="container">
+        <form class="login-form">
+            <input required maxlength=15 type="text" placeholder="what is your name?" />
+            <button>Log In</button>
+        </form>
+        <h1 id="greeting" class="hidden"></h1>
+        <h2 id="clock">00:00</h2>
+        <form id="todo-form">
+            <input type="text" placeholder="Write what you have to do" required/>
+        </form>
+        <ul id="todo-list"></ul>
+    </main>
     <div id="weather">
         <span></span>
         <span></span>
     </div>
-
+    <footer class="container">
+        <div id = "quote">
+            <blockquote>
+                <span></span><br>
+                <footer>
+                    <span></span>
+                </footer>
+            </blockquote>
+        </div>
+    </footer>
+    
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
-    <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/weather.js"></script>
+    <script src="js/background.js"></script>
 </body>
 
 </html>
