--- a/home.html
+++ b/home.html
@@ -44,6 +44,7 @@
     <script src="js/todo.js"></script>
     <script src="js/weather.js"></script>
     <script src="js/background.js"></script>
+    <!-- 경로바뀜 -->
 </body>
 
 </html>
